<resources>
    <string name="app_name">OpenEvent</string>
    <string name="hello_world">Hello world!</string>

    <!-- Системные -->
    <string name="action_settings">Settings</string>
    <string name="add_event">Добавить свое</string>
    <string name="city_change">Изменить город</string>
    <string name="cancel">Отмена</string>
    <string name="notFillFields">Заполнены не все обязательные данные</string>
    <string-array name="cities">
        <item>Астрахань</item>
        <item>Волгоград</item>
        <item>Екатеринбург</item>
        <item>Иркутск</item>
        <item>Казань</item>
        <item>Краснодар</item>
        <item>Москва</item>
        <item>Набережные Челны</item>
        <item>Нижний Новгород</item>
        <item>Новосибирск</item>
        <item>Омск</item>
        <item>Санкт-Петербург</item>
        <item>Ульяновск</item>
        <item>Челябинск</item>
    </string-array>

    <!-- Activity -->
    <string name="title_activity_event">Подробно о мероприятии</string>
    <string name="title_activity_add_events">Добавить событие</string>

    <!-- Toolbar -->
    <string name="add">Add</string>

    <!-- NavigationDrawerFragment-->
    <string name="nav_title">Категории</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string-array name="nav_rv">
        <item>Все события</item>
        <item>Активный отдых</item>
        <item>Бизнес</item>
        <item>Выставки</item>
        <item>Детские</item>
        <item>Концерты</item>
        <item>Мастер-классы</item>
        <item>Образование</item>
        <item>Развлечения</item>
        <item>Семинары</item>
        <item>Спорт</item>
        <item>Тренинги</item>
        <item>Хобби</item>
    </string-array>

    <!-- AddCVEvent -->
    <string name="tv_input">Заполнить все поля ниже:</string>
    <string name="hint_city">Город</string>
    <string name="hint_category">Категория</string>
    <string name="hint_title">Заголовок</string>
    <string name="hint_about">Описание</string>
    <string name="hint_time">Время и дата</string>
    <string name="hint_address">Адрес</string>
    <string name="hint_org">Организатор</string>

    <!-- CVEventActivity -->
    <string name="cv_about">Описание мероприятия</string>

    <!-- Events item -->
    <string name="date">Дата:</string>
    <string name="time">Время начала:</string>
    <string name="info">Описание мероприятия:</string>

    <!-- Buuton -->
    <string name="btn_yes">Точно иду</string>
    <string name="btn_maybe">Может пойду</string>
    <string name="btn_link">Получить билет</string>
    <string name="btn_get">Отправить</string>

    <!-- Удалить: черновой контент -->
    <string-array name="rv_one">
        <item>red</item>
        <item>black</item>
        <item>green</item>
    </string-array>

</resources>
